--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "nodemon": "^2.0.12"
   },
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
