--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-express",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -14,8 +14,8 @@
     "nodemon": "^2.0.12"
   },
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
